# tt06_tinyrv1

./: README.md  info.yaml
docs/: info.md
src/: CMakeLists.txt  Makefile  alu.h  constants.h  control.h  cpu.h  cpu_tb.cpp  instructioncounter.h  main.cpp  regs.h  test_nand.cpp  test_nand.sv  testbench.cpp  tt_cejmu_riscv.v  tt_um_cejmu.h  tt_um_cejmu.v  tt_um_cejmu_riscv.v
src/design/: alu.vhd  constants.vhd  control.vhd  cpu.vhd  instructioncounter.vhd  memory.vhd  regs.vhd  spi_master.vhd  spi_slave.vhd  spi_slave_tt06.vhd  spi_slave_tt06_with_memory.vhd  tt_cejmu_riscv.vhd  tt_um_cejmu_riscv.vhd  vhdl_design_test.vhd
src/testbenches/: commons.vhd  cputb.vhd  spi_mastertb.vhd
test/: Makefile  gl_test.py  tb.v  test.py
